Everyday/C20190220/.metadata/.plugins/org.eclipse.cdt.ui/tryGamesTan.build.log
16:55:45 **** Incremental Build of configuration Debug for project tryGamesTan ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o TanDemo.o "..\\TanDemo.c" 
..\TanDemo.c: In function 'createfood':
..\TanDemo.c:183:9: error: invalid type argument of '->' (have 'int')
   food-1->x=rand()%52+2;
         ^~
..\TanDemo.c: In function 'biteself':
..\TanDemo.c:208:20: error: 'x' undeclared (first use in this function)
   if(self->x==head-x&&self->y==head->y)
                    ^
..\TanDemo.c:208:20: note: each undeclared identifier is reported only once for each function it appears in

16:55:46 Build Failed. 2 errors, 0 warnings. (took 346ms)

